add pressure to sack analysis

--- a/notebooks/fantasy/reciever_metrics.ipynb
+++ b/notebooks/fantasy/reciever_metrics.ipynb
@@ -11,7 +11,7 @@
     "jupyter_black.load()\n",
     "import pandas as pd\n",
     "import nfl_data_py as nfl\n",
-    "from src.visualisation.visualisation import plot_bar\n",
+    "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
     "from src.visualisation import colors\n",
     "import plotly.express as px\n",
     "\n",
@@ -294,15 +294,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_team_scatter(yprr_df.head(30), x=\"yprr\", y=\"fdprr\", alpha=0.8)"
+    "plot_team_scatter(yprr_df.iloc[1:40], x=\"yprr\", y=\"fdprr\", alpha=0.8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -337,77 +330,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fig = px.bar(\n",
-    "    yrr_plot,\n",
-    "    x=\"yrr\",\n",
-    "    y=\"player\",\n",
-    "    orientation=\"h\",\n",
-    "    color=\"team\",\n",
-    "    color_discrete_map=colors.team_unique_colors,\n",
-    "    opacity=0.85,\n",
-    ")\n",
-    "# Iterate through the data and add logos to the chart\n",
-    "for index, row in yrr_plot.iterrows():\n",
-    "    scale = 1.25\n",
-    "    fig.add_layout_image(\n",
-    "        dict(\n",
-    "            source=f\"https://a.espncdn.com/i/teamlogos/nfl/500/{row['team']}.png\",\n",
-    "            x=row[\"yrr\"],  # Adjust the position\n",
-    "            y=row[\"player\"],\n",
-    "            xref=\"x\",\n",
-    "            yref=\"y\",\n",
-    "            sizex=scale,  # Adjust the size\n",
-    "            sizey=scale,  # Adjust the size\n",
-    "            sizing=\"contain\",\n",
-    "            opacity=1,\n",
-    "            xanchor=\"center\",\n",
-    "            yanchor=\"middle\",\n",
-    "        )\n",
-    "    )\n",
-    "fig.update_yaxes(categoryorder=\"total ascending\")\n",
-    "MARGIN = 100\n",
-    "fig.update_layout(\n",
-    "    height=800,\n",
-    "    width=700,\n",
-    "    template=\"plotly_dark\",\n",
-    "    # template=\"plotly_white\",\n",
-    "    xaxis_title=f\"Yards per Route Run\",\n",
-    "    yaxis_title=\"\",\n",
-    "    title=\"2023 Yards per Route Run\",\n",
-    "    title_x=0.5,  # Centers the title horizontally\n",
-    "    annotations=[\n",
-    "        dict(\n",
-    "            text=\"Data: @nflfastR | Chart: @griffreichert\",\n",
-    "            x=-0.25,  # centered\n",
-    "            y=-0.1,  # position above\n",
-    "            xref=\"paper\",\n",
-    "            yref=\"paper\",\n",
-    "            showarrow=False,\n",
-    "            xanchor=\"left\",\n",
-    "            yanchor=\"top\",\n",
-    "            font=dict(size=12),\n",
-    "        )\n",
-    "    ],\n",
-    "    margin=dict(\n",
-    "        t=MARGIN, b=MARGIN, l=MARGIN, r=MARGIN\n",
-    "    ),  # Adjust top and bottom margin to make space for the title and the note\n",
-    ")\n",
-    "fig.update_traces(showlegend=False)\n",
-    "# Show the chart\n",
-    "fig.show()"
+    "Future TODOs\n",
+    "* explosive play rate\n",
+    "* target share"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
