add best fit lines, add time to throw analysis

--- a/notebooks/ratings/pressure.ipynb
+++ b/notebooks/ratings/pressure.ipynb
@@ -146,7 +146,7 @@
     "        {\n",
     "            \"pass_attempt\": [\"sum\"],\n",
     "            \"was_pressure\": [\"sum\", \"mean\"],\n",
-    "            # \"qb_hit\": [\"sum\", \"mean\"],\n",
+    "            \"time_to_throw\": [\"mean\"],\n",
     "            \"sack\": [\"sum\", \"mean\"],\n",
     "            \"epa\": [\"sum\", \"mean\"],\n",
     "        }\n",
@@ -164,6 +164,7 @@
     "        \"posteam\": \"team\",\n",
     "        \"epas\": \"total_epa\",\n",
     "        \"epa_rate\": \"epa_per_play\",\n",
+    "        \"time_to_throw_rate\": \"time_to_throw\",\n",
     "    }\n",
     ").query(\"pass_attempts > 75\")\n",
     "pbp_pass_qb[\"pressure_to_sack_rate\"] = (\n",
@@ -207,6 +208,47 @@
     "    title=\"2023 QB EPA per Play vs Pressure to Sack Rate (min 75 attempts)\",\n",
     "    flip_x=True,\n",
     "    custom_style=custom_style,\n",
+    "    best_fit=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_scatter(\n",
+    "    pbp_pass_qb.sort_values(\"pressure_to_sack_rate\").head(45),\n",
+    "    x=\"time_to_throw\",\n",
+    "    y=\"pressure_to_sack_rate\",\n",
+    "    marker=\"player\",\n",
+    "    add_marker_label=True,\n",
+    "    alpha=0.8,\n",
+    "    title=\"2023 QB Time to Throw vs Pressure to Sack Rate (min 75 attempts)\",\n",
+    "    flip_y=True,\n",
+    "    custom_style=custom_style,\n",
+    "    best_fit=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_scatter(\n",
+    "    pbp_pass_qb.sort_values(\"pressure_to_sack_rate\").head(45),\n",
+    "    x=\"time_to_throw\",\n",
+    "    y=\"epa_per_play\",\n",
+    "    marker=\"player\",\n",
+    "    add_marker_label=True,\n",
+    "    alpha=0.8,\n",
+    "    title=\"2023 QB Time to Throw vs Passing EPA per Play (min 75 attempts)\",\n",
+    "    # flip_y=True,\n",
+    "    custom_style=custom_style,\n",
+    "    best_fit=True,\n",
     ")"
    ]
   },
