add PROE and KROE notebooks

--- a/notebooks/fantasy/target_share.ipynb
+++ b/notebooks/fantasy/target_share.ipynb
@@ -13,7 +13,7 @@
     "import matplotlib.pyplot as plt\n",
     "import nfl_data_py as nfl\n",
     "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
-    "from src.utils.methods import flatten_grouped_cols\n",
+    "from utils.data import flatten_grouped_cols\n",
     "from src.visualisation.colors import team_unique_colors, team_unique_alt_colors\n",
     "from src.utils.logos import get_team_logo\n",
     "from matplotlib.offsetbox import AnnotationBbox\n",
