--- a/notebooks/ratings/pressure.ipynb
+++ b/notebooks/ratings/pressure.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import nfl_data_py as nfl\n",
     "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
-    "from src.utils.methods import flatten_grouped_cols\n",
+    "from utils.data import flatten_grouped_cols\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
