fix wp notebook

--- a/notebooks/ratings/win-perc-spread.ipynb
+++ b/notebooks/ratings/win-perc-spread.ipynb
@@ -6,17 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "import jupyter_black\n",
+    "import matplotlib.pyplot as plt\n",
+    "import nfl_data_py as nfl\n",
+    "from typing import Literal, Tuple\n",
+    "\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from scipy.stats import norm\n",
     "\n",
     "jupyter_black.load()\n",
-    "\n",
-    "import pandas as pd\n",
-    "import nfl_data_py as nfl\n",
-    "import xgboost as xgb\n",
-    "from typing import Literal, Tuple\n",
-    "from src.modelling.metrics import success_rate_lambda\n",
-    "from src.visualisation.visualisation import plot_scatter\n",
-    "\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
   },
@@ -54,7 +55,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wp_df.plot(x=\"vegas_home_wp\", y=\"spread_line\", kind=\"scatter\")"
+    "X = wp_df[[\"vegas_home_wp\"]].to_numpy()\n",
+    "y = wp_df[\"spread_line\"].to_numpy()\n",
+    "\n",
+    "# Transform features to include polynomial terms\n",
+    "poly = PolynomialFeatures(degree=3)  # You can experiment with the degree\n",
+    "X_poly = poly.fit_transform(X)\n",
+    "\n",
+    "# Fit the model\n",
+    "model = LinearRegression()\n",
+    "model.fit(X_poly, y)\n",
+    "\n",
+    "ROUND = 3\n",
+    "\n",
+    "\n",
+    "# To predict\n",
+    "def predict_spread_reg(percentile):\n",
+    "    return round(model.predict(poly.transform([[percentile]]))[0], ROUND)\n",
+    "\n",
+    "\n",
+    "def predict_spread_norm(percentile, stdev):\n",
+    "    return round(float(norm.ppf(percentile)) * stdev, ROUND)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot the actual data points\n",
+    "plt.scatter(\n",
+    "    wp_df[\"vegas_home_wp\"], wp_df[\"spread_line\"], color=\"blue\", label=\"Actual Data\"\n",
+    ")\n",
+    "\n",
+    "# Generate a range of percentiles\n",
+    "percentiles = np.linspace(min(wp_df[\"vegas_home_wp\"]), max(wp_df[\"vegas_home_wp\"]), 100)\n",
+    "\n",
+    "# Predict using both models\n",
+    "reg_predictions = [predict_spread_reg(p) for p in percentiles]\n",
+    "norm_predictions = [predict_spread_norm(p, stdev=12) for p in percentiles]\n",
+    "\n",
+    "# Plot the polynomial regression line\n",
+    "plt.plot(percentiles, reg_predictions, color=\"red\", label=\"Polynomial Regression\")\n",
+    "\n",
+    "# Plot the normal distribution prediction line\n",
+    "plt.plot(percentiles, norm_predictions, color=\"green\", label=\"Normal Distribution\")\n",
+    "\n",
+    "# Add labels and legend\n",
+    "plt.xlabel(\"Vegas Home WP\")\n",
+    "plt.ylabel(\"Spread Line\")\n",
+    "plt.legend()\n",
+    "plt.title(\"Spread Line vs. Vegas Home WP\")\n",
+    "plt.show()"
    ]
   },
   {
