win prob updates

--- a/notebooks/archive/win-perc-spread.ipynb
+++ b/notebooks/archive/win-perc-spread.ipynb
@@ -74,7 +74,7 @@
     "    return round(model.predict(poly.transform([[percentile]]))[0], ROUND)\n",
     "\n",
     "\n",
-    "def predict_spread_norm(percentile, stdev):\n",
+    "def predict_spread_norm(percentile, stdev=11.5):\n",
     "    return round(float(norm.ppf(percentile)) * stdev, ROUND)"
    ]
   },
@@ -85,8 +85,12 @@
    "outputs": [],
    "source": [
     "# Plot the actual data points\n",
-    "plt.scatter(\n",
-    "    wp_df[\"vegas_home_wp\"], wp_df[\"spread_line\"], color=\"blue\", label=\"Actual Data\"\n",
+    "ax = wp_df.plot(\n",
+    "    x=\"vegas_home_wp\",\n",
+    "    y=\"spread_line\",\n",
+    "    kind=\"scatter\",\n",
+    "    color=\"steelblue\",\n",
+    "    title=\"Spread Line vs. Vegas Home WP\",\n",
     ")\n",
     "\n",
     "# Generate a range of percentiles\n",
@@ -94,19 +98,20 @@
     "\n",
     "# Predict using both models\n",
     "reg_predictions = [predict_spread_reg(p) for p in percentiles]\n",
-    "norm_predictions = [predict_spread_norm(p, stdev=12) for p in percentiles]\n",
+    "norm_predictions = [predict_spread_norm(p, stdev=11.5) for p in percentiles]\n",
     "\n",
-    "# Plot the polynomial regression line\n",
-    "plt.plot(percentiles, reg_predictions, color=\"red\", label=\"Polynomial Regression\")\n",
+    "# Plot the polynomial regression line on the same axes\n",
+    "# ax.plot(percentiles, reg_predictions, color=\"red\", label=\"Polynomial Regression\")\n",
     "\n",
-    "# Plot the normal distribution prediction line\n",
-    "plt.plot(percentiles, norm_predictions, color=\"green\", label=\"Normal Distribution\")\n",
+    "# Plot the normal distribution prediction line on the same axes\n",
+    "ax.plot(percentiles, norm_predictions, color=\"green\", label=\"Normal Distribution\")\n",
     "\n",
     "# Add labels and legend\n",
-    "plt.xlabel(\"Vegas Home WP\")\n",
-    "plt.ylabel(\"Spread Line\")\n",
-    "plt.legend()\n",
-    "plt.title(\"Spread Line vs. Vegas Home WP\")\n",
+    "ax.set_xlabel(\"Vegas Home WP\")\n",
+    "ax.set_ylabel(\"Spread Line\")\n",
+    "# ax.legend()\n",
+    "\n",
+    "# Show the plot\n",
     "plt.show()"
    ]
   },
