--- a/notebooks/analysis/kickers.ipynb
+++ b/notebooks/analysis/kickers.ipynb
@@ -23,7 +23,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
     "\n",
-    "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
+    "from visualisation.plots import plot_bar, plot_scatter\n",
     "from src.utils.data import flatten_grouped_cols\n",
     "from src.visualisation.colors import team_unique_colors, team_unique_alt_colors\n",
     "from src.utils.logos import get_team_logo\n",
