--- a/notebooks/fantasy/target_share.ipynb
+++ b/notebooks/fantasy/target_share.ipynb
@@ -12,7 +12,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import nfl_data_py as nfl\n",
-    "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
+    "from visualisation.plots import plot_bar, plot_scatter\n",
     "from utils.data import flatten_grouped_cols\n",
     "from src.visualisation.colors import team_unique_colors, team_unique_alt_colors\n",
     "from src.utils.logos import get_team_logo\n",
