--- a/notebooks/ratings/epa-analysis.ipynb
+++ b/notebooks/ratings/epa-analysis.ipynb
@@ -6,16 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import jupyter_black\n",
-    "\n",
-    "jupyter_black.load()\n",
-    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
+    "import jupyter_black\n",
     "import nfl_data_py as nfl\n",
     "from typing import Literal, Tuple\n",
-    "from src.modelling.metrics import success_rate_lambda\n",
-    "from src.visualisation.visualisation import plot_team_scatter\n",
     "\n",
+    "from src.modelling.metrics import success_rate_lambda\n",
+    "from visualisation.plots import plot_team_scatter\n",
+    "\n",
+    "jupyter_black.load()\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
   },
