add power rating to spread pipeline

--- a/notebooks/picks/pipeline-rough-draft.ipynb
+++ b/notebooks/picks/pipeline-rough-draft.ipynb
@@ -13,7 +13,8 @@
     "from typing import Literal, Tuple\n",
     "\n",
     "from src.modelling.metrics import success_rate_lambda\n",
-    "from visualisation.plots import plot_team_scatter\n",
+    "from src.visualisation.plots import plot_team_scatter\n",
+    "from src.modelling.utils import guess_the_lines_ovr\n",
     "\n",
     "jupyter_black.load()\n",
     "pd.set_option(\"display.max_columns\", None)"
@@ -24,7 +25,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from src.utils.connections import load_service_account\n",
+    "\n",
+    "# Load the service acount from the google_config.json file\n",
+    "sa = load_service_account()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open the google sheet\n",
+    "gsheet = sa.open(\"NFL Power Ratings\")\n",
+    "# open power ratings for this week\n",
+    "work_sheet = gsheet.worksheet(f\"Wk {week}\")\n",
+    "power_df = pd.DataFrame(work_sheet.get(range_name=\"A1:P33\"))\n",
+    "# reset column names\n",
+    "power_df.columns = power_df.iloc[0]\n",
+    "power_df = power_df.drop(0).set_index(\"team\").astype(\"float32\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess_the_lines_ovr(power_df, week=1, season=2024)"
+   ]
   }
  ],
  "metadata": {
