--- a/notebooks/picks/pipeline-rough-draft.ipynb
+++ b/notebooks/picks/pipeline-rough-draft.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "from src.modelling.metrics import success_rate_lambda\n",
     "from src.visualisation.plots import plot_team_scatter\n",
-    "from src.modelling.utils import guess_the_lines_ovr\n",
+    "from src.modelling.utils import guess_the_lines_ovr, get_week_spreads\n",
     "\n",
     "jupyter_black.load()\n",
     "pd.set_option(\"display.max_columns\", None)"
@@ -63,8 +63,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "guess_the_lines_ovr(power_df, week=1, season=2024)"
+    "schedule_df = get_week_spreads(1, 2024)\n",
+    "schedule_df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess_the_lines_ovr(power_df, week=1, season=2024).drop(\n",
+    "    columns=[\"away_gpf\", \"home_gpf\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
