weekly report progress

--- a/notebooks/ratings/pressure.ipynb
+++ b/notebooks/ratings/pressure.ipynb
@@ -11,8 +11,8 @@
     "jupyter_black.load()\n",
     "import pandas as pd\n",
     "import nfl_data_py as nfl\n",
-    "from src.visualisation.visualisation import plot_bar, plot_scatter\n",
-    "from utils.data import flatten_grouped_cols\n",
+    "from src.visualisation.plots import plot_bar, plot_scatter\n",
+    "from src.utils.data import flatten_grouped_cols\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)"
    ]
@@ -250,50 +250,6 @@
     "    custom_style=custom_style,\n",
     "    best_fit=True,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pbp_pass.time_to_throw.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "print(plt.style.available)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[col for col in pbp_pass.columns if \"time\" in col]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pbp_pass[pbp_pass[\"was_pressure\"].isna()][[\"desc\", \"was_pressure\", \"sack\"]].head()\n",
-    "pbp_pass[(pbp_pass[\"was_pressure\"].isna()) & (pbp_pass[\"sack\"] < 1)].sample(4)\n",
-    "# [\"desc\", \"was_pressure\", \"sack\"]\n",
-    "# [\"desc\"]\n",
-    "\n",
-    "# pbp_pass[pbp_pass[\"was_pressure\"].isna()][\"sack\"].value_counts()\n",
-    "pbp_pass[pbp_pass[\"sack\"] == 1][\"was_pressure\"].value_counts()"
    ]
   }
  ],
