--- a/notebooks/eager/analytics-with-eager.ipynb
+++ b/notebooks/eager/analytics-with-eager.ipynb
@@ -624,7 +624,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ryoe.head(20)"
+    "ryoe.head(20)\n"
    ]
   },
   {
@@ -1446,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
