update pipeline for weekly picks from power ratings

--- a/notebooks/archive/elo-scrapers.ipynb
+++ b/notebooks/archive/elo-scrapers.ipynb
@@ -11,12 +11,12 @@
     "import shutil\n",
     "\n",
     "# Navigate up one level to the parent directory and append it to sys.path\n",
-    "sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
+    "# sys.path.append(os.path.abspath(os.path.join(os.getcwd(), os.pardir)))\n",
     "# import nfl_data_py as nfl\n",
     "import pandas as pd\n",
-    "from src import utils\n",
-    "from src.config import DATA_PATH, SUMER_ELO_PATH, SUMER_OFFENSE_PATH, SUMER_DEFENSE_PATH, SUMER_PLAYER_PATH\n",
-    "from src.scrapers import scrape_inpredictable, scrape_unabated, scrape_espn, scrape_nfelo"
+    "# from src import utils\n",
+    "from src.utils.paths import DATA_PATH, SUMER_ELO_PATH, SUMER_OFFENSE_PATH, SUMER_DEFENSE_PATH, SUMER_PLAYER_PATH\n",
+    "from src.archive.scrapers import scrape_inpredictable, scrape_unabated, scrape_espn, scrape_nfelo"
    ]
   },
   {
@@ -32,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WEEK = 10\n",
-    "SEASON = 2023"
+    "WEEK = 1\n",
+    "SEASON = 2024"
    ]
   },
   {
@@ -423,7 +423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
