--- a/notebooks/ratings/pressure.ipynb
+++ b/notebooks/ratings/pressure.ipynb
@@ -14,7 +14,8 @@
     "from src.visualisation.plots import plot_bar, plot_scatter\n",
     "from src.utils.data import flatten_grouped_cols\n",
     "\n",
-    "pd.set_option(\"display.max_columns\", None)"
+    "pd.set_option(\"display.max_columns\", None)\n",
+    "season = 2023"
    ]
   },
   {
@@ -30,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbp: pd.DataFrame = nfl.import_pbp_data([2023])"
+    "pbp: pd.DataFrame = nfl.import_pbp_data([season], include_participation=False)"
    ]
   },
   {
@@ -39,9 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# offense_players - list of id's\n",
-    "id_df = nfl.import_ids()\n",
-    "id_df.sample(4)"
+    "[col for col in pbp.columns if \"hur\" in col]"
    ]
   },
   {
