--- a/notebooks/ratings/weekly-report.ipynb
+++ b/notebooks/ratings/weekly-report.ipynb
@@ -42,7 +42,7 @@
     "pd.set_option(\"display.max_columns\", None)\n",
     "warnings.filterwarnings(\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "\n",
-    "season = 2023\n",
+    "season = 2024\n",
     "week = 1"
    ]
   },
@@ -60,7 +60,9 @@
    "outputs": [],
    "source": [
     "# load data for the given season and week\n",
-    "pbp_start: pd.DataFrame = nfl.import_pbp_data(years=[season])\n",
+    "pbp_start: pd.DataFrame = nfl.import_pbp_data(\n",
+    "    years=[season], include_participation=False\n",
+    ")\n",
     "# remove garbage time\n",
     "# pbp = pbp_start.query(f\"week=={week}\").query(\n",
     "pbp = pbp_start.query(f\"wp>={DEFAULT_WIN_PROB} and def_wp>={DEFAULT_WIN_PROB}\").copy()\n",
@@ -89,6 +91,15 @@
     "\n",
     "# Rushing\n",
     "off_epa_run_df, def_epa_run_df = dual_epa_metrics(pbp_run)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbp.head()"
    ]
   },
   {
@@ -183,7 +194,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "plot_scatter(\n",
+    "    off_epa_run_df,\n",
+    "    x=\"success_rate\",\n",
+    "    y=\"epa\",\n",
+    "    title=f\"Run Offense EPA and Success Rate, Week {week} {season}\",\n",
+    "    # flip_x=True,\n",
+    "    # flip_y=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_scatter(\n",
+    "    off_epa_pass_df,\n",
+    "    x=\"success_rate\",\n",
+    "    y=\"epa\",\n",
+    "    title=f\"Pass Offense EPA and Success Rate, Week {week} {season}\",\n",
+    "    # flip_x=True,\n",
+    "    # flip_y=True,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,18 +262,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pass Rush"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbp_run"
+    "plot_scatter(\n",
+    "    def_epa_pass_df,\n",
+    "    x=\"success_rate\",\n",
+    "    y=\"epa\",\n",
+    "    title=f\"Pass Defense EPA and Success Rate, Week {week} {season}\",\n",
+    "    flip_x=True,\n",
+    "    flip_y=True,\n",
+    ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
