update weekly pipeline

--- a/notebooks/ratings/weekly-report.ipynb
+++ b/notebooks/ratings/weekly-report.ipynb
@@ -43,7 +43,7 @@
     "warnings.filterwarnings(\"ignore\", category=pd.errors.PerformanceWarning)\n",
     "\n",
     "season = 2024\n",
-    "week = 1"
+    "week = 2"
    ]
   },
   {
@@ -64,7 +64,7 @@
     "    years=[season], include_participation=False\n",
     ")\n",
     "# remove garbage time\n",
-    "# pbp = pbp_start.query(f\"week=={week}\").query(\n",
+    "pbp = pbp_start.query(f\"week<={week}\")\n",
     "pbp = pbp_start.query(f\"wp>={DEFAULT_WIN_PROB} and def_wp>={DEFAULT_WIN_PROB}\").copy()\n",
     "\n",
     "# Create the 'explosive_run' and 'explosive_pass' columns in the pbp DataFrame\n",
@@ -283,6 +283,13 @@
     "    flip_y=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
